[package]
name = "core-sol-bond-stake-sc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "core_sol_bond_stake_sc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
mpl-token-metadata={version = "4.1.2"}
solana-program = "1.18.18"
spl-token = "4.0.0"
anchor-spl = "0.30.0"
solana-security-txt = "1.1.1"
