[package]
name = "core-sol-bond-stake-sc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "core_sol_bond_stake_sc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
spl-account-compression = { version="0.3.1", features = ["cpi"] }
mpl-bubblegum = { version = "1.4.0"}
solana-program = ">=1.18.11,<=2"
spl-token = "4.0.0"
anchor-spl = "0.29.0"
uint = "0.9.1"
solana-security-txt = "1.1.1"

[dev-dependencies]
quickcheck = "0.9"